2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Removed completed tasks.

2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* config/i386/threads.h (THREADSTACKSIZE): Doubled to fix
	stack size problem with nice's bootstrap.

2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	Moved gnu.bytecode into tools.jar to fix problems
	with nice's bootstrap.

	Reported by:  Daniel Bonniot  <bonniot@users.sourceforge.net>

	* kaffe/scripts/javap.in: Add tools.jar to classpath.

	* kaffe/scripts/kaffe.in: Don't add tools.jar to BOOTCLASSPATH.

	* libraries/javalib/Makefile.am.in: (jrelib_DATA) Added tools.jar.
	(JAR_CMD2) Don't add gnu.bytecode and gnu.classpath.tools.javap
	to rt.jar.
	(JAR_CMD7) Put gnu.bytecode and gnu.classpath.tools.javap into
	tools.jar.
	(tools.jar) New target.

2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* config/arm/linux/md.c: Added missing arm/jit.h include.

	Reported by:  gian paolo ciceri <gp.ciceri@acm.org>
	
2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* config/arm/linux/md.c: Added missing md.h include.

	Reported by:  gian paolo ciceri <gp.ciceri@acm.org>
	
2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/Makefile.am (libkaffevm_la_DEPENDENCIES): 
	Added libreplace.

	Reported by:  Michael Franz <mvfranz@gmail.com>
	
2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* test/regression/TestScript.in (SECURITY_PROVIDER_URL): 
	Use absolute path instead of realtive one to avoid problems with
	build and source directories being on different NFS volumes.

	Reported by:  Riccardo Mottola <zuse@libero.it>

2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Set warning leel back to 
	-Wall to sort the most important ones out first.

2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* config/i386/jit3-i386.def,
	include/errors.h,
	include/kaffe_jni.h,
	kaffe/kaffevm/baseClasses.c,
	kaffe/kaffevm/exception.c,
	kaffe/kaffevm/exception.h,
	kaffe/kaffevm/soft.h,
	kaffe/kaffevm/support.h,
	kaffe/kaffevm/thread.c,