@@ -1,3 +1,11 @@
+2005-04-01  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/clib/nio/gnu_java_nio_VMSelector.c (Java_gnu_java_nio_VMSelector_select): 
+	Use strerror if strerror_r is not available.
+
+	Reported by:  Michael Franz <mvfranz@gmail.com>,
+	              Riccardo Mottola <zuse@libero.it>
+
 2005-03-31  Dalibor Topic  <robilad@kaffe.org>
 
 	* TODO: Removed completed tasks.
